--- a/your.history.html
+++ b/your.history.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet">
+    <link href="table.css" rel="stylesheet">
+    <link href="main.css" rel="stylesheet">
+    <link href="article.css" rel="stylesheet">
+    <link href="navi.css" rel="stylesheet">
+    <link href="footer.css" rel="stylesheet">
+    <link href="header.css" rel="stylesheet">
     <script defer src="your.history.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
