change flex warp in article

--- a/your.history.html
+++ b/your.history.html
@@ -34,10 +34,10 @@
 <article class="article">
     <h2 id="o-nas">Cześć,<br>
         jeśli masz problemy z nauką Historii, to mam dla Ciebie rozwiązanie...<br>
-        <span class="article__company">Your.History </span> to miejsce gdzie nauka o naszej przeszłości przychodzi z łatwością.<br>
-        Stworzyliśmy zbiór tematów i opracowań, które pomogą Ci się uczyć w łatwy i przyjaźny sposób.<br>
-        Tematy zostały przetworzone w taki sposób, aby były dopasowane do postawy programowej<br>
-        dla szkół podstawowych oraz dla szkół średnich, w tym również dla osób które przygotowują się<br> 
+        <span class="article__company">Your.History </span> to miejsce gdzie nauka o naszej przeszłości przychodzi z łatwością.
+        Stworzyliśmy zbiór tematów i opracowań, które pomogą Ci się uczyć w łatwy i przyjaźny sposób.
+        Tematy zostały przetworzone w taki sposób, aby były dopasowane do postawy programowej
+        dla szkół podstawowych oraz dla szkół średnich, w tym również dla osób które przygotowują się
         do zdawania matury z rozszerzonej historii.</h2> 
 </article>  
         <img class="picture" src="https://operon.pl/var/operon/storage/images/operon.pl/aktualnosci/po-szkole/geniusz-zamkniety-w-bajce/258515-1-pol-PL/Geniusz-zamkniety-w-bajce.jpg" alt="otwarta księga">         
