--- a/your.history.html
+++ b/your.history.html
@@ -23,7 +23,7 @@
 <body class="body js-body">
     
 <header>
-    <img src="https://files.librus.pl/art/22/06/3/a_warunki_realizacji_przedmiotu_historia_i_terazniejszosc_LS_ban.jpg" alt="zegar z historią">
+    <img class="picture" src="https://files.librus.pl/art/22/06/3/a_warunki_realizacji_przedmiotu_historia_i_terazniejszosc_LS_ban.jpg" alt="zegar z historią">
     <h1 class="header">Witaj w<span class="header___company"> Your.History</span></H1>
 </header>
 <nav class="navi">
@@ -36,7 +36,7 @@
 <article class="article">
     <h2 id="o-nas">Cześć,<br>
         jeśli masz problemy z nauką Historii, to mam dla Ciebie rozwiązanie...<br>
-        <span class="article__company">Your.History </span> to miejsce gdzie nauka o naszej przeszłości przychodzi z łatwością.
+        <span class="article__company">Your.History</span> to miejsce gdzie nauka o naszej przeszłości przychodzi z łatwością.
         Stworzyliśmy zbiór tematów i opracowań, które pomogą Ci się uczyć w łatwy i przyjaźny sposób.
         Tematy zostały przetworzone w taki sposób, aby były dopasowane do postawy programowej
         dla szkół podstawowych oraz dla szkół średnich, w tym również dla osób które przygotowują się
