--- a/your.history.html
+++ b/your.history.html
@@ -28,9 +28,9 @@
 </header>
 <nav class="navi">
     <ul>
-       <li class="navi__list"><a class="navi__link" href="#o-nas">o Aplikacji</a></li>
-       <li class="navi__list"><a class="navi__link" href="#historia">Ważne wydarzenia na Świecie</a></li>
-       <li class="navi__list"><a class="navi__link" href="#dołącz">Dołącz do Nas</a></li>
+       <li class="navi__list"><a class="navi__link click" href="#o-nas">o Aplikacji</a></li>
+       <li class="navi__list"><a class="navi__link click" href="#historia">Ważne wydarzenia na Świecie</a></li>
+       <li class="navi__list"><a class="navi__link click" href="#dołącz">Dołącz do Nas</a></li>
     </ul>
 </nav>
 <article class="article">
