--- a/your.history.html
+++ b/your.history.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="Your.History.png">
-    <link rel="icon" href="Your.png">
-    <link href="style.css" rel="stylesheet">
-    <link href="table.css" rel="stylesheet">
-    <link href="main.css" rel="stylesheet">
-    <link href="article.css" rel="stylesheet">
-    <link href="navi.css" rel="stylesheet">
-    <link href="footer.css" rel="stylesheet">
-    <link href="header.css" rel="stylesheet">
-    <script defer src="your.history.js"></script>
+    <meta property="og:image" content="../git_hub/image/Your.History.png">
+    <link rel="icon" href="../git_hub/image/Your.png">
+    <link href="../git_hub/Css/article.css" rel="stylesheet">
+    <link href="../git_hub/Css/footer.css" rel="stylesheet">
+    <link href="../git_hub/Css/header.css" rel="stylesheet">
+    <link href="../git_hub/Css/main.css" rel="stylesheet">
+    <link href="../git_hub/Css/navi.css" rel="stylesheet">
+    <link href="../git_hub/Css/style.css" rel="stylesheet">
+    <link href="../git_hub/Css/table.css" rel="stylesheet">
+    <script defer src="../git_hub/JS/your.history.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
