--- a/your.history.html
+++ b/your.history.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="./image/Your.History.png">
+    <meta property="og:image" content="./image/YourHistory.png">
     <link rel="icon" href="./image/Your.png">
     <link href="./Css/article.css" rel="stylesheet">
     <link href="./Css/footer.css" rel="stylesheet">
